--- a/bonus/index.html
+++ b/bonus/index.html
@@ -31,14 +31,25 @@
             </ul>
             <p>Whether you're a beginner or an experienced photographer looking to refine your skills, this guide is your key to unlocking a new level of creativity and confidence in your photography journey.</p>
             <div align="center">
-                <a href="default-affiliate-link" id="buyButton" class="button">Buy Now and Get Instant Access!</a>
+                <!-- Define the button once -->
+                <a href="#" id="buyButton" class="button">Buy Now and Get Instant Access!</a>
             </div>
             <p align="center" style="margin-top: 20px;">Don't miss out on this exclusive offer. Transform your photography skills today!</p>
         </div>
+        </td>
+      </tr>
+    </table></td>
+  </tr>
+  <tr>
+    <td><table align="center" border="0" cellpadding="0" cellspacing="0">
+      <tr>
+        <td><img alt="Footer" src="images/footer.png" /></td>
+      </tr>
+    </table></td>
+  </tr>
+</table>
 
-          <!-- HTML for the buy button on the landing page -->
-<a href="#" id="buyButton" class="button">Buy Now and Get Instant Access!</a>
-
+<!-- Remove the second button definition and JavaScript -->
 <script>
 window.addEventListener('DOMContentLoaded', (event) => {
     // Function to update the buy button link based on the affiliate query parameter
@@ -55,21 +66,6 @@ window.addEventListener('DOMContentLoaded', (event) => {
     updateBuyButtonLink();
 });
 </script>
-
-
-          
-        </td>
-      </tr>
-    </table></td>
-  </tr>
-  <tr>
-    <td><table align="center" border="0" cellpadding="0" cellspacing="0">
-      <tr>
-        <td><img alt="Footer" src="images/footer.png" /></td>
-      </tr>
-    </table></td>
-  </tr>
-</table>
 
 </body>
 </html>
