--- a/bonus/index.html
+++ b/bonus/index.html
@@ -59,12 +59,17 @@ window.addEventListener('DOMContentLoaded', (event) => {
         if (affiliateLink) {
             // Update the href attribute of the buy button with the affiliate link
             document.getElementById('buyButton').href = affiliateLink;
+            
+            // Update the URL without refreshing the page
+            const newURL = '${currentURL}/bonus/'; // Replace this with the desired URL
+            history.pushState({}, '', newURL);
         }
     }
     
     // Call the function to update the buy button link when the page loads
     updateBuyButtonLink();
 });
+
 </script>
 
 </body>
