--- a/bonus/index.html
+++ b/bonus/index.html
@@ -61,7 +61,7 @@ window.addEventListener('DOMContentLoaded', (event) => {
             document.getElementById('buyButton').href = affiliateLink;
             
             // Update the URL without refreshing the page (keeping it unchanged)
-            const newURL = '/'; // Leave this empty to keep the current URL
+            const newURL = '/bonus'; // Leave this empty to keep the current URL
             history.pushState({}, '', newURL);
         }
     }
