--- a/bonus/index.html
+++ b/bonus/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body leftmargin="0" topmargin="0" marginheight="0" marginwidth="0">
-
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tr>
     <td><table align="center" border="0" cellpadding="0" cellspacing="0">
@@ -22,19 +21,21 @@
       <tr>
         <td>
         <div class="contentbox">
-            <h1 align="center" class="headline">Discover the Secrets to Mastering Digital Photography!</h1>
-            <p>Are you ready to take your photography skills to the next level? Our comprehensive guide, <strong>"Digital Photography Mastery,"</strong> is packed with expert tips, techniques, and secrets that will help you capture stunning images like never before.</p>
-            <ul>
-                <li>Unlock the potential of your DSLR, mirrorless, or smartphone camera.</li>
-                <li>Learn composition techniques that turn ordinary shots into breathtaking art.</li>
-                <li>Master post-processing skills to enhance your photos with ease.</li>
+            <h1 align="center" class="headline">Unlock Your Exclusive Bonus eBooks When You Purchase Today!</h1>
+            <p>Maximize your learning with these specially curated eBooks designed to complement your journey. Secure your purchase now and gain instant access to the following titles:</p>
+            
+            <!-- List of eBooks -->
+            <ul class="ebook-list">
+                <li><strong>eBook 1:</strong> Mastering the Art of Composition</li>
+                <li><strong>eBook 2:</strong> The Ultimate Guide to Landscape Photography</li>
+                <li><strong>eBook 3:</strong> Secrets of Portrait Photography</li>
+                <li><strong>eBook 4:</strong> Post-Processing Techniques for Beginners</li>
+                <li><strong>eBook 5:</strong> Advanced Lighting Methods</li>
             </ul>
-            <p>Whether you're a beginner or an experienced photographer looking to refine your skills, this guide is your key to unlocking a new level of creativity and confidence in your photography journey.</p>
+            
             <div align="center">
-                <!-- Define the button once -->
-                <a href="#" id="buyButton" class="button">Buy Now and Get Instant Access!</a>
+                <a href="default-affiliate-link" id="buyButton" class="button">Buy Now and Get Instant Access!</a>
             </div>
-            <p align="center" style="margin-top: 20px;">Don't miss out on this exclusive offer. Transform your photography skills today!</p>
         </div>
         </td>
       </tr>
@@ -49,7 +50,6 @@
   </tr>
 </table>
 
-<!-- Remove the second button definition and JavaScript -->
 <script>
 window.addEventListener('DOMContentLoaded', (event) => {
     // Function to update the buy button link based on the affiliate query parameter
@@ -73,3 +73,8 @@ window.addEventListener('DOMContentLoaded', (event) => {
 
 </body>
 </html>
+
+
+
+
+
