--- a/new/index.html
+++ b/new/index.html
@@ -6,7 +6,7 @@
 
 		
 	<title>Fandom Profit Secrets</title>
-		<link href="css/fandom-style.css" rel="stylesheet" type="text/css"><link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet" type="text/css"></head><body>
+		<link href="css/style.css" rel="stylesheet" type="text/css"><link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet" type="text/css"></head><body>
 <div class="header">
 
 <div class="headerarea">
