--- a/bonus/affiliate.html
+++ b/bonus/affiliate.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 
-<body leftmargin="0" topmargin="0" marginheight="0" marginwidth="0">
+<body style="margin: 0; padding: 0;">
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tr>
@@ -32,9 +32,9 @@
             <p id="result"></p>
 
           <!-- Container for the generated link and copy button -->
-<div id="linkContainer" style="display:none; margin-top: 20px;">
+<div id="linkContainer" style="display:none; margin-top: 20px; width: 100%; max-width: 600px;">
     <p id="linkExplanation">Here is your custom affiliate link. Click button to copy:</p> <!-- Explanatory text -->
-    <input type="text" id="generatedLink" class="form-input" readonly style="margin-bottom: 10px;">
+    <input type="text" id="generatedLink" class="form-input" readonly style="margin-bottom: 10px; width: 100%;">
     <button type="button" id="copyButton" class="button">Copy Link</button>
 </div>
 
@@ -91,11 +91,6 @@ document.addEventListener('DOMContentLoaded', function() {
                 <p>For detailed guidance, refer to WarriorPlus support and documentation.</p>
             </div>
         </div>
-       <!-- After the form, for displaying the generated link -->
-<div id="linkContainer" style="display:none; margin-top: 20px; background-color: #f0f0f0; padding: 10px;">
-    <textarea id="generatedLink" style="width: 100%; height: 50px;"></textarea>
-    <button type="button" id="copyButton" class="button">Copy Link</button>
-</div>
 
         </td>
       </tr>
