--- a/bonus/affiliate.html
+++ b/bonus/affiliate.html
@@ -35,7 +35,7 @@
 <div id="linkContainer" style="display:none; margin-top: 20px; width: 100%; max-width: 600px;">
     <p id="linkExplanation">Here is your custom affiliate link. Click button to copy:</p> <!-- Explanatory text -->
     <input type="text" id="generatedLink" class="form-input" readonly style="margin-bottom: 10px; width: 100%;">
-    <button type="button" id="copyButton" class="button">Copy Link</button>
+    <button type="button" id="copyButton" class="button" style="margin: 0 auto;">Copy Link</button>
 </div>
 
 
