--- a/bonus/index.html
+++ b/bonus/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 
-<body style="margin: 0; padding: 0;">
+<body style="margin: 0; padding: 0; width: 850px; margin: 0 auto;">
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tr>
     <td><table align="center" border="0" cellpadding="0" cellspacing="0">
@@ -27,7 +27,7 @@
             
             <!-- eBooks Display Section with Vertical Listing -->
             <div class="ebook-container">
-                <div class="ebook">
+                <div class="ebook" style="margin-bottom: 20px;">
                     <img src="images/report.png" alt="eBook 1" class="ebook-image">
                     <div class="ebook-info">
                         <h3>Mastering the Art of Composition</h3>
@@ -35,14 +35,35 @@
                     </div>
                 </div>
                 <!-- Repeat for each eBook -->
-                <div class="ebook">
+                <div class="ebook" style="margin-bottom: 20px;">
                     <img src="images/report.png" alt="eBook 2" class="ebook-image">
                     <div class="ebook-info">
                         <h3>The Ultimate Guide to Landscape Photography</h3>
                         <p>Explore breathtaking landscapes and learn how to capture the beauty of nature in every shot.</p>
                     </div>
                 </div>
-                <!-- Add more eBooks as needed -->
+                <!-- Add three more eBooks -->
+                <div class="ebook" style="margin-bottom: 20px;">
+                    <img src="images/report.png" alt="eBook 3" class="ebook-image">
+                    <div class="ebook-info">
+                        <h3>Portrait Photography Mastery</h3>
+                        <p>Unlock the secrets of capturing stunning portraits with professional techniques and insights.</p>
+                    </div>
+                </div>
+                <div class="ebook" style="margin-bottom: 20px;">
+                    <img src="images/report.png" alt="eBook 4" class="ebook-image">
+                    <div class="ebook-info">
+                        <h3>Advanced Photo Editing Techniques</h3>
+                        <p>Learn advanced editing techniques to enhance your photos and make them stand out.</p>
+                    </div>
+                </div>
+                <div class="ebook" style="margin-bottom: 20px;">
+                    <img src="images/report.png" alt="eBook 5" class="ebook-image">
+                    <div class="ebook-info">
+                        <h3>Night Sky Photography Guide</h3>
+                        <p>Discover the art of capturing the beauty of the night sky with expert tips and tricks.</p>
+                    </div>
+                </div>
             </div>
             
             <div align="center" style="margin-top: 20px;">
