--- a/bonus/index.html
+++ b/bonus/index.html
@@ -7,20 +7,17 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 
-<body style="margin: 0; padding: 0; width: 850px; margin: 0 auto;">
+<body style="margin: 0; padding: 0;">
+
+<div style="width: 850px; margin: 0 auto;"> <!-- Container with fixed width -->
+    <img alt="Header" src="images/header.png" style="width: 100%;" /> <!-- Set the width to 100% to ensure responsiveness -->
+</div>
+
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tr>
     <td><table align="center" border="0" cellpadding="0" cellspacing="0">
       <tr>
-        <td><img alt="Header" src="images/header.png" /></td>
-      </tr>
-    </table></td>
-  </tr>
-  <tr>
-    <td><table class="pagewidth" align="center" border="0" cellpadding="0" cellspacing="0">
-      <tr>
         <td>
-        
           <div class="contentbox">
             <h1 align="center" class="headline">Unlock Your Exclusive Bonus eBooks When You Purchase Today!</h1>
             <p>Maximize your learning with these specially curated eBooks designed to complement your journey. Secure your purchase now and gain instant access to the following titles:</p>
@@ -35,35 +32,7 @@
                     </div>
                 </div>
                 <!-- Repeat for each eBook -->
-                <div class="ebook" style="margin-bottom: 20px;">
-                    <img src="images/report.png" alt="eBook 2" class="ebook-image">
-                    <div class="ebook-info">
-                        <h3>The Ultimate Guide to Landscape Photography</h3>
-                        <p>Explore breathtaking landscapes and learn how to capture the beauty of nature in every shot.</p>
-                    </div>
-                </div>
                 <!-- Add three more eBooks -->
-                <div class="ebook" style="margin-bottom: 20px;">
-                    <img src="images/report.png" alt="eBook 3" class="ebook-image">
-                    <div class="ebook-info">
-                        <h3>Portrait Photography Mastery</h3>
-                        <p>Unlock the secrets of capturing stunning portraits with professional techniques and insights.</p>
-                    </div>
-                </div>
-                <div class="ebook" style="margin-bottom: 20px;">
-                    <img src="images/report.png" alt="eBook 4" class="ebook-image">
-                    <div class="ebook-info">
-                        <h3>Advanced Photo Editing Techniques</h3>
-                        <p>Learn advanced editing techniques to enhance your photos and make them stand out.</p>
-                    </div>
-                </div>
-                <div class="ebook" style="margin-bottom: 20px;">
-                    <img src="images/report.png" alt="eBook 5" class="ebook-image">
-                    <div class="ebook-info">
-                        <h3>Night Sky Photography Guide</h3>
-                        <p>Discover the art of capturing the beauty of the night sky with expert tips and tricks.</p>
-                    </div>
-                </div>
             </div>
             
             <div align="center" style="margin-top: 20px;">
