--- a/bonus/index.html
+++ b/bonus/index.html
@@ -30,7 +30,50 @@
                     </div>
                 </div>
                 <!-- Repeat for each eBook -->
-                <!-- Add three more eBooks -->
+            </div>
+
+            <div class="ebook-container">
+                <div class="ebook" style="margin-bottom: 20px;">
+                    <img src="images/report.png" alt="eBook 1" class="ebook-image">
+                    <div class="ebook-info">
+                        <h3>Mastering the Art of Composition</h3>
+                        <p>Discover the secrets to capturing compelling photographs with techniques that create depth and interest.</p>
+                    </div>
+                </div>
+                <!-- Repeat for each eBook -->
+            </div>
+
+            <div class="ebook-container">
+                <div class="ebook" style="margin-bottom: 20px;">
+                    <img src="images/report.png" alt="eBook 1" class="ebook-image">
+                    <div class="ebook-info">
+                        <h3>Mastering the Art of Composition</h3>
+                        <p>Discover the secrets to capturing compelling photographs with techniques that create depth and interest.</p>
+                    </div>
+                </div>
+                <!-- Repeat for each eBook -->
+            </div>
+
+            <div class="ebook-container">
+                <div class="ebook" style="margin-bottom: 20px;">
+                    <img src="images/report.png" alt="eBook 1" class="ebook-image">
+                    <div class="ebook-info">
+                        <h3>Mastering the Art of Composition</h3>
+                        <p>Discover the secrets to capturing compelling photographs with techniques that create depth and interest.</p>
+                    </div>
+                </div>
+                <!-- Repeat for each eBook -->
+            </div>
+
+            <div class="ebook-container">
+                <div class="ebook" style="margin-bottom: 20px;">
+                    <img src="images/report.png" alt="eBook 1" class="ebook-image">
+                    <div class="ebook-info">
+                        <h3>Mastering the Art of Composition</h3>
+                        <p>Discover the secrets to capturing compelling photographs with techniques that create depth and interest.</p>
+                    </div>
+                </div>
+                <!-- Repeat for each eBook -->
             </div>
             
             <div align="center" style="margin-top: 20px;">
