--- a/bonus/index.html
+++ b/bonus/index.html
@@ -5,6 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Digital Product Bonus Page</title>
 <link rel="stylesheet" href="style.css" />
+
+  <style>
+/* Adjust the width of the eBook images */
+.ebook-image {
+    width: 200px; /* Set the desired width */
+    height: auto; /* Automatically adjust the height to maintain aspect ratio */
+}
+
+/* Adjust the column width for eBook descriptions */
+.ebook-info {
+    max-width: 300px; /* Set the maximum width */
+    margin: 0 auto; /* Center the description */
+}
+</style>
 </head>
 
 <body style="margin: 0; padding: 0;">
