--- a/bonus/index.html
+++ b/bonus/index.html
@@ -27,7 +27,7 @@
                     <img src="images/report.png" alt="eBook 1" class="ebook-image">
                     <div class="ebook-info">
                         <h3>Secrets of Time Management Mastery</h3>
-                        <p>Dive into the world of effective time management with this comprehensive guide. Learn proven strategies to boost productivity, prioritize tasks, and reclaim control of your schedule. Whether you're a student, professional, or entrepreneur, discover how to make the most out of every hour and achieve your goals with ease.</p>
+                        <p>Dive into the world of effective time management with this comprehensive guide. Learn proven strategies to boost productivity, prioritize tasks, and reclaim control of your schedule.<br>Whether you're a student, professional, or entrepreneur, discover how to make the most out of every hour and achieve your goals with ease.</p>
                     </div>
                 </div>
                 <!-- Repeat for each eBook -->
@@ -38,7 +38,7 @@
                     <img src="images/report.png" alt="eBook 1" class="ebook-image">
                     <div class="ebook-info">
                         <h3>The Ultimate Guide to Financial Freedom</h3>
-                        <p>Take charge of your financial future with this indispensable resource. Uncover the principles of wealth creation, budgeting techniques, and investment strategies that can lead you to financial independence. From managing debt to building passive income streams, this book provides practical advice to help you build a secure financial foundation.</p>
+                        <p>Take charge of your financial future with this indispensable resource. Uncover the principles of wealth creation, budgeting techniques, and investment strategies that can lead you to financial independence.<br>From managing debt to building passive income streams, this book provides practical advice to help you build a secure financial foundation.</p>
                     </div>
                 </div>
                 <!-- Repeat for each eBook -->
@@ -49,7 +49,7 @@
                     <img src="images/report.png" alt="eBook 1" class="ebook-image">
                     <div class="ebook-info">
                         <h3>Unlocking the Power of Positive Thinking</h3>
-                        <p>Harness the transformative power of positive thinking and cultivate a mindset of success. Explore proven methods to overcome negative thought patterns, cultivate resilience, and foster a greater sense of well-being. With actionable tips and inspiring anecdotes, this book will empower you to navigate life's challenges with optimism and confidence.</p>
+                        <p>Harness the transformative power of positive thinking and cultivate a mindset of success. Explore proven methods to overcome negative thought patterns, cultivate resilience, and foster a greater sense of well-being.<br>With actionable tips and inspiring anecdotes, this book will empower you to navigate life's challenges with optimism and confidence.</p>
                     </div>
                 </div>
                 <!-- Repeat for each eBook -->
@@ -60,7 +60,7 @@
                     <img src="images/report.png" alt="eBook 1" class="ebook-image">
                     <div class="ebook-info">
                         <h3>The Art of Effective Communication</h3>
-                        <p>Communication is key to success in both personal and professional settings. In this guide, you'll learn the art of effective communication, including active listening, conflict resolution, and assertiveness techniques. Whether you're communicating with colleagues, friends, or family members, this book will help you navigate conversations with clarity and empathy.</p>
+                        <p>Communication is key to success in both personal and professional settings. In this guide, you'll learn the art of effective communication, including active listening, conflict resolution, and assertiveness techniques.<br>Whether you're communicating with colleagues, friends, or family members, this book will help you navigate conversations with clarity and empathy.</p>
                     </div>
                 </div>
                 <!-- Repeat for each eBook -->
@@ -71,7 +71,7 @@
                     <img src="images/report.png" alt="eBook 1" class="ebook-image">
                     <div class="ebook-info">
                         <h3>Navigating the Digital Landscape: A Guide to Online Marketing</h3>
-                        <p>In today's digital age, understanding online marketing is essential for businesses of all sizes. From social media marketing to search engine optimization, this book covers the fundamentals of digital marketing and provides practical tips for reaching your target audience online. Whether you're a beginner or an experienced marketer, this guide will help you navigate the ever-evolving digital landscape.</p>
+                        <p>In today's digital age, understanding online marketing is essential for businesses of all sizes. From social media marketing to search engine optimization, this book covers the fundamentals of digital marketing and provides practical tips for reaching your target audience online.<br>Whether you're a beginner or an experienced marketer, this guide will help you navigate the ever-evolving digital landscape.</p>
                     </div>
                 </div>
                 <!-- Repeat for each eBook -->
