--- a/bonus/index.html
+++ b/bonus/index.html
@@ -78,7 +78,7 @@
             </div>
             
             <div align="center" style="margin-top: 20px;">
-                <a href="default-affiliate-link" class="button">Buy Now and Get Instant Access!</a>
+                <a href="#" class="button">Buy Now and Get Instant Access!</a>
             </div>
         </div>
         </td>
