--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>NFT Minting & Affiliate Script Test</title>
+<script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -47,12 +48,12 @@
 <body>
 <div class="container">
     <h1>NFT Minting & Affiliate Script Test</h1>
-    <form action="#" method="post">
+    <form id="mintForm">
         <label for="nftName">NFT Name:</label>
-        <input type="text" id="nftName" name="nftName" placeholder="Enter NFT name">
+        <input type="text" id="nftName" name="nftName" placeholder="Enter NFT name" required>
 
         <label for="nftDescription">NFT Description:</label>
-        <input type="text" id="nftDescription" name="nftDescription" placeholder="Enter NFT description">
+        <input type="text" id="nftDescription" name="nftDescription" placeholder="Enter NFT description" required>
 
         <label for="affiliateCode">Affiliate Code (Optional):</label>
         <input type="text" id="affiliateCode" name="affiliateCode" placeholder="Enter affiliate code if any">
@@ -60,5 +61,66 @@
         <input type="submit" value="Mint NFT">
     </form>
 </div>
+
+<script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', () => {
+        const mintForm = document.getElementById('mintForm');
+
+        async function connectWallet() {
+            if (window.ethereum) {
+                try {
+                    await window.ethereum.request({ method: 'eth_requestAccounts' });
+                } catch (error) {
+                    console.error("User denied account access", error);
+                }
+            } else {
+                console.error('Please install MetaMask!');
+            }
+        }
+
+        async function mintNFT(nftName, nftDescription, affiliateCode) {
+            if (!window.ethereum) {
+                console.log('Ethereum provider is not available');
+                return;
+            }
+
+            const provider = new ethers.providers.Web3Provider(window.ethereum);
+            const signer = provider.getSigner();
+
+            // Placeholder values - replace these with your contract's actual details
+            const nftMintContractAddress = "<YOUR_NFTMINT_CONTRACT_ADDRESS>";
+            const affiliateTrackerContractAddress = "<YOUR_AFFILIATE_TRACKER_CONTRACT_ADDRESS>";
+            const nftMintABI = []; // ABI for your NFTmint contract
+            const affiliateTrackerABI = []; // ABI for your AffiliateTracker contract
+
+            const nftMintContract = new ethers.Contract(nftMintContractAddress, nftMintABI, signer);
+            const affiliateTrackerContract = new ethers.Contract(affiliateTrackerContractAddress, affiliateTrackerABI, signer);
+
+            // Example metadata URI - you might generate or fetch this based on the NFT's properties
+            const metadataURI = "ipfs://<YOUR_METADATA_URI>";
+
+            try {
+                // Handle affiliate registration or verification here if necessary
+
+                // Mint the NFT
+                const transaction = await nftMintContract.safeMint(signer.getAddress(), metadataURI); // Adjust parameters as needed
+                await transaction.wait();
+                console.log("NFT minted successfully");
+            } catch (error) {
+                console.error("Failed to mint NFT", error);
+            }
+        }
+
+        connectWallet();
+
+        mintForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const nftName = document.getElementById('nftName').value;
+            const nftDescription = document.getElementById('nftDescription').value;
+            const affiliateCode = document.getElementById('affiliateCode').value;
+            mintNFT(nftName, nftDescription, affiliateCode);
+        });
+    });
+</script>
 </body>
 </html>
