--- a/Affiliate/link.html
+++ b/Affiliate/link.html
@@ -8,13 +8,13 @@
 <body>
     <h2>Affiliate Link Generator</h2>
     <label for="affiliateCode">Affiliate Code:</label>
-    <input type="text" id="affiliateCode" name="affiliateCode">
+    <input type="text" id="Your Wallet Address" name="affiliateCode">
     <button onclick="generateLink()">Generate Link</button>
     <p>Generated Link: <span id="generatedLink"></span></p>
 
     <script>
         function generateLink() {
-            const baseNFTMintPageURL = 'http://yourdomain.com/nft-mint-page'; // Replace with your actual NFT mint page URL
+            const baseNFTMintPageURL = 'https://robertbolgar.dev/Affiliate'; // Replace with your actual NFT mint page URL
             const affiliateCodeInput = document.getElementById('affiliateCode');
             const generatedLinkElement = document.getElementById('generatedLink');
             
