--- a/Affiliate/link.html
+++ b/Affiliate/link.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h2>Affiliate Link Generator</h2>
-    <label for="affiliateCode">Affiliate Code:</label>
-    <input type="text" id="Your Wallet Address" name="affiliateCode">
+    <label for="affiliateCode">Your Wallet Address:</label>
+    <input type="text" id="affiliateCode" name="affiliateCode">
     <button onclick="generateLink()">Generate Link</button>
     <p>Generated Link: <span id="generatedLink"></span></p>
 
