--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -83,7 +83,8 @@
 
             const nftName = document.getElementById('nftName').value;
                 const nftDescription = document.getElementById('nftDescription').value;
-                const nftMetadataURI = "YOUR_NFT_METADATA_URI";
+                const nftMetadataURI = "https://robertbolgar.dev/Affiliate/nft-metadata.json";
+
 
           const salePrice = ethers.utils.parseEther("0.05");
                 const transaction = await nftMintContract.safeMint(signer.getAddress(), nftMetadataURI, ethers.constants.AddressZero, { value: salePrice });
