--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -83,7 +83,7 @@
 
             const nftName = document.getElementById('nftName').value;
                 const nftDescription = document.getElementById('nftDescription').value;
-                const nftMetadataURI = "https://robertbolgar.dev/Affiliate/nft-metadata.json";
+                const nftMetadataURI = "https://robertbolgar.github.io/Affiliate/nft-metadata.json";
 
 
           const salePrice = ethers.utils.parseEther("0.05");
