--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT Minting & Affiliate Script Test</title>
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
-     <link rel="stylesheet" href="/styles.css"> <!-- Link to your external CSS file -->
+     <link rel="stylesheet" href="/style.css"> <!-- Link to your external CSS file -->
 </head>
 <body>
 <div class="container">
