--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -373,6 +373,11 @@ document.addEventListener('DOMContentLoaded', () => {
 				"internalType": "string",
 				"name": "uri",
 				"type": "string"
+			},
+			{
+				"internalType": "address",
+				"name": "affiliate",
+				"type": "address"
 			}
 		],
 		"name": "safeMint",
