--- a/Affiliate/index2.html
+++ b/Affiliate/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFT Minting & Affiliate Script Test</title>
+    <title>NFT Minter & Affiliate Script Test</title>
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
     <link rel="stylesheet" href="style.css"> <!-- Ensure you have this CSS file -->
 </head>
